--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
 </head>
 <body>
   <header>
-    <img src="../assets/logo.png" alt="ParcelForce Logo" class="logo" />
+    <img src="logo.png" alt="ParcelForce Logo" class="logo" />
     <nav>
       <a href="#home">Home</a>
       <a href="#about">About</a>
@@ -679,7 +679,7 @@
 
   <section class="hero" id="home">
     <video autoplay muted loop playsinline class="bg-video">
-      <source src="../assets/courier-bg.mp4" type="video/mp4" />
+      <source src="courier-bg.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <div class="hero-overlay">
