--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
   </section>
 
   <footer>
-    <img src="../assets/logo.png" alt="ParcelForce Logo" />
+    <img src="logo.png" alt="ParcelForce Logo" />
     <p><strong>ParcelForce International Courier</strong> &copy; 2025. All rights reserved.</p>
     <p>Privacy | Terms | Accessibility</p>
   </footer>
