--- a/track.html
+++ b/track.html
@@ -516,21 +516,21 @@ a:focus, button:focus, input:focus {
     },
     "PF99564008CN": {
       sender: {
-        name: "Anthony Callaghan",
+        name: "Callaghan",
         address: "103 Notting Hill Gate, Kensington, London W11 3LB",
         phone: "+1 954 264 4309"
       },
       recipient: {
-        name: "Lucinda Williams",
-        address: "39 Pepperbuch Street Extension 32, Bethelsdrop, 6059 Port Elizabeth South Africa",
-        phone: "+27 834 173 209"
+        name: "Lindiwe Kunene",
+        address: "176 Aloe, Place Greenstone drive, Greenstone South Africa",
+        phone: "+27 81 5743 741"
       },
       journey: [
-        "Collected — 02 Dec 2025",
-        "Cleared export hub — 02 Dec 2025",
-        "Out for delivery — 02 Dec 2025"
+        "Collected — 08 Dec 2025",
+        "Cleared export hub — 08 Dec 2025",
+        "Out for delivery — 08 Dec 2025"
       ],
-      deliveryDate: "2025-12-02",
+      deliveryDate: "2025-12-08",
       checkpoint: "Parcel is currently in transit from London to South Africa",
       coords: [-26.2041, 28.0473],
       status: "in_transit"
