--- a/track.html
+++ b/track.html
@@ -423,7 +423,7 @@ a:focus, button:focus, input:focus {
       </div>
 
       <p style="background: #fff3cd; padding: 12px; border-radius: 10px; border-left: 4px solid #ff9800; margin-top: 12px;">
-        ⚠️ <strong>Parcel On Hold:</strong> Your parcel is currently being held in transit because the Commercial Invoice / Customs Declaration document has not been provided.
+        ⚠️ <strong>Parcel On Hold:</strong> Parcel on hold for Value Added Tax (VAT) before final delivery to Mrs. Ella Pelling home address.
       </p>
 
       <div class="qr-area" style="margin-top:8px;">
@@ -484,11 +484,11 @@ a:focus, button:focus, input:focus {
         address: "35 Ringley Road, Horsham, West Sussex RH12 4AS England"
       },
       journey: [
-        "Collected — 04 Nov 2025",
-        "Departed hub — 24 Nov 2025",
-        "Out for delivery — 25 Nov 2025"
+        "Collected — 05 Jan 2026",
+        "Departed hub — 05 Jan 2026",
+        "Out for delivery — 05 Jan 2026"
       ],
-      deliveryDate: "2025-11-25",
+      deliveryDate: "2026-01-05",
       checkpoint: "Parcel is currently in transit",
       coords: [51.0629, -0.3270],
       status: "in_transit"
