--- a/track.html
+++ b/track.html
@@ -423,7 +423,7 @@ a:focus, button:focus, input:focus {
       </div>
 
       <p style="background: #fff3cd; padding: 12px; border-radius: 10px; border-left: 4px solid #ff9800; margin-top: 12px;">
-        ⚠️ <strong>Parcel On Hold:</strong> Parcel on hold for Value Added Tax (VAT) before final delivery to Mrs. Ella Pelling home address.
+        ⚠️ <strong>Parcel On Hold:</strong>
       </p>
 
       <div class="qr-area" style="margin-top:8px;">
@@ -500,16 +500,16 @@ a:focus, button:focus, input:focus {
         phone: "+357 95 585645"
       },
       recipient: {
-        name: "Patricia Mavundla",
-        address: "St Patrick's Hospital, Bizana 4800, Eastern Cape",
-        phone: "+27 84 378 4396"
+        name: "Vumile Nester Mkhaliphi",
+        address: "Kwaluseni Infant Primary School. P.O Box 91 Kwaluseni",
+        phone: "+268 7694 6459 "
       },
       journey: [
-        "Collected — 28 Nov 2025",
-        "Cleared export hub — 01 Dec 2025",
-        "Out for delivery — 02 Dec 2025"
+        "Collected — 09 Jan 2026",
+        "Cleared export hub — 09 Jan 2026",
+        "Out for delivery — 12 Jan 2026"
       ],
-      deliveryDate: "2025-12-02",
+      deliveryDate: "2026-12-01",
       checkpoint: "Parcel is currently in international transit",
       coords: [-26.1392, 28.2460],
       status: "in_transit"
