Update checkpoint message for parcel tracking

--- a/track.html
+++ b/track.html
@@ -510,7 +510,7 @@ a:focus, button:focus, input:focus {
         "Out for delivery — 12 Jan 2026"
       ],
       deliveryDate: "2026-12-01",
-      checkpoint: "Parcel is currently in international transit",
+      checkpoint: "Parcel is currently in transit O R International Airport",
       coords: [-26.1392, 28.2460],
       status: "in_transit"
     },
