--- a/track.html
+++ b/track.html
@@ -489,7 +489,7 @@ a:focus, button:focus, input:focus {
         "Out for delivery — 05 Jan 2026"
       ],
       deliveryDate: "2026-01-05",
-      checkpoint: "Parcel on hold for Value Added Tax (VAT) before final delivery to Mrs. Ella Pelling home address",
+      checkpoint: "Stamp needed on parcel",
       coords: [51.0629, -0.3270],
       status: "in_transit"
     },
