Modify checkpoint message in track.html
Updated checkpoint message to include custom and delivery fee.

--- a/track.html
+++ b/track.html
@@ -510,7 +510,7 @@ a:focus, button:focus, input:focus {
         "Out for delivery — 24 Jan 2026"
       ],
       deliveryDate: "2026-24-01",
-      checkpoint: "Parcel is currently in transit O R International Airport",
+      checkpoint: "Parcel is currently in transit O R International Airport  You're to pay R1,950 for Custom and Delivery Fee",
       coords: [-26.1392, 28.2460],
       status: "in_transit"
     },
