--- a/track.html
+++ b/track.html
@@ -500,17 +500,17 @@ a:focus, button:focus, input:focus {
         phone: "+18566136069"
       },
       recipient: {
-        name: "Rozita Davis",
-        address: "73 Rissik Street Parow",
-        phone: "+27744552299 "
+        name: "Kim Kiewit",
+        address: "69 HOOPCRENENT Atlantis Capetown",
+        phone: "+27711666607 "
       },
       journey: [
-        "Collected — 23 Jan 2026",
-        "Cleared export hub — 23 Jan 2026",
-        "Out for delivery — 24 Jan 2026"
+        "Collected — 27 Jan 2026",
+        "Cleared export hub — 27 Jan 2026",
+        "Out for delivery — 28 Jan 2026"
       ],
-      deliveryDate: "2026-24-01",
-      checkpoint: "Parcel is currently in transit O R International Airport  You're to pay R1,950 for Custom and Delivery Fee",
+      deliveryDate: "2026-28-01",
+      checkpoint: "Parcel is currently in transit O R International Airport  You're to pay R1,500 for Custom and Delivery Fee",
       coords: [-26.1392, 28.2460],
       status: "in_transit"
     },
