--- a/track.html
+++ b/track.html
@@ -485,11 +485,11 @@ a:focus, button:focus, input:focus {
       },
       journey: [
         "Collected — 05 Jan 2026",
-        "Departed hub — 05 Jan 2026",
-        "Out for delivery — 05 Jan 2026"
+        "Departed hub — 14 Feb 2026",
+        "Out for delivery — 13 Feb 2026"
       ],
-      deliveryDate: "2026-01-05",
-      checkpoint: "Stamp needed on parcel",
+      deliveryDate: "2026-02-14",
+      checkpoint: "Parcel will be delivered to Mrs Ella Pelling Home Address 13/02/2026 - 14/02/2026",
       coords: [51.0629, -0.3270],
       status: "in_transit"
     },
