Update checkpoint message for delivery details

--- a/track.html
+++ b/track.html
@@ -489,7 +489,7 @@ a:focus, button:focus, input:focus {
         "Out for delivery — 13 Feb 2026"
       ],
       deliveryDate: "2026-02-14",
-      checkpoint: "Parcel will be delivered to Mrs Ella Pelling Home Address 13/02/2026 - 14/02/2026",
+      checkpoint: "Parcel will be delivered to Mrs. Ella Pelling home address between 13/02/2026 to 14/02/2026",
       coords: [51.0629, -0.3270],
       status: "in_transit"
     },
