Update checkpoint message for parcel status

--- a/track.html
+++ b/track.html
@@ -531,7 +531,7 @@ a:focus, button:focus, input:focus {
         "Out for delivery — 22 feb 2026"
       ],
       deliveryDate: "2026-02-21",
-      checkpoint: "Parcel is currently in transit from London to South Africa",
+      checkpoint: "Parcel just arrived in johannesburg airport",
       coords: [-26.2041, 28.0473],
       status: "in_transit"
     }
